actualizacion de ga y metarobots

--- a/404.html
+++ b/404.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página no encontrada - 404 | Luis Flores</title>
     <meta name="description" content="La página que buscas no existe o ha sido movida.">
+    <meta name="robots" content="noindex, nofollow">
     <!-- CSS principal con carga async -->
      <!-- Favicons optimizados -->
     <link rel="icon" type="image/png" sizes="48x48" href="/images/favicon-analista-luis-flores.png">
