--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@ body {
           });
 
           gtag('js', new Date());
-          gtag('config', 'G-G997CG2JM5');
+          gtag('config', 'G-19WWZT89X1');
         };
       }, 2000);
     });
