--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Política de Privacidad | Luis Flores - Analista de Datos</title>
     <meta name="description" content="Política de privacidad del sitio web de Luis Flores. Información sobre el tratamiento y protección de datos personales.">
+     <meta name="robots" content="noindex, nofollow">
+    <link rel="canonical" href="https://www.analistaluisflores.online/politica-privacidad">
     <!-- CSS principal con carga async -->
      <!-- Favicons optimizados -->
     <link rel="icon" type="image/png" sizes="48x48" href="/images/favicon-analista-luis-flores.png">
