--- a/politica-cookies.html
+++ b/politica-cookies.html
@@ -6,7 +6,7 @@
     <title>Política de Cookies | Luis Flores - Analista de Datos</title>
     <meta name="description" content="Política de cookies del sitio web de Luis Flores. Información sobre el uso de cookies y tecnologías similares.">
     <meta name="author" content="Luis Flores">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="noindex, nofollow">
     <link rel="canonical" href="https://www.analistaluisflores.online/politica-cookies">
     <!-- CSS principal con carga async -->
      <!-- Favicons optimizados -->
